added abstract to Schapiro2018NC

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-09-06 17:17:30 +0200 
+%% Created for Wittkuhn, Lennart at 2019-09-06 17:34:22 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -184,9 +184,10 @@
 	Bdsk-Url-2 = {https://doi.org/10.1016/j.tics.2019.07.012}}
 
 @article{Schapiro2018NC,
+	Abstract = {The hippocampus replays experiences during quiet rest periods, and this replay benefitssubsequent memory. A critical open question is how memories are prioritized for this replay.We used functional magnetic resonance imaging (fMRI) pattern analysis to track item-levelreplay in the hippocampus during an awake rest period after participants studied 15 objectsand completed a memory test. Objects that were remembered less well were replayed moreduring the subsequent rest period, suggesting a prioritization process in which weakermemories---memories most vulnerable to forgetting---are selected for replay. In a secondsession 12 hours later, more replay of an object during a rest period predicted better subsequentmemory for that object. Replay predicted memory improvement across sessions onlyfor participants who slept during that interval. Our results provide evidence that replay in thehuman hippocampus prioritizes weakly learned information, predicts subsequent memoryperformance, and relates to memory improvement across a delay with sleep.},
 	Author = {Schapiro, Anna C. and McDevitt, Elizabeth A. and Rogers, Timothy T. and Mednick, Sara C. and Norman, Kenneth A.},
 	Date-Added = {2019-09-06 11:21:55 +0200},
-	Date-Modified = {2019-09-06 15:25:24 +0200},
+	Date-Modified = {2019-09-06 17:34:22 +0200},
 	Doi = {10.1038/s41467-018-06213-1},
 	Issn = {2041-1723},
 	Journal = {Nature Communications},
