--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -3,7 +3,10 @@
 \newacronym{BET}{BET}{Brain Extraction Tool}
 \newacronym{BIDS}{BIDS}{brain imaging data structure}
 \newacronym{BOLD}{BOLD}{blood-oxygen-level dependent}
+\newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
+\newacronym{DMN}{DMN}{default mode network}
+\newacronym{EEG}{EEG}{electroencephalography}
 \newacronym{EPI}{EPI}{echo-planar imaging}
 \newacronym{FDR}{FDR}{false discovery rate}
 \newacronym{FA}{FA}{flip angle}
@@ -14,15 +17,25 @@
 \newacronym{GLM}{GLM}{general linear model}
 \newacronym{GR}{GR}{gradient recalled}
 \newacronym{HRF}{HRF}{hemodynamic response function}
+\newacronym{iEEG}{iEEG}{intracranial electroencephalography}
 \newacronym{INU}{INU}{intensity non-uniformity}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
 \newacronym{ITI}{ITI}{inter-trial interval}
+\newacronym{MEG}{MEG}{magnetoencephalography}
 \newacronym{MB}{MB}{multi-band}
 \newacronym{MNI}{MNI}{Montreal Neurological Institute}
 \newacronym{MRI}{MRI}{magnetic resonance imaging}
 \newacronym{ms}{ms}{milliseconds}
 \newacronym{min}{min}{minutes}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
+\newacronym{OCD}{OCD}{obsessive-compulsive disorder}
+\newacronym{OFC}{OFC}{orbitofrontal cortex}
+\newglossaryentry{PTSD}{
+name={PTSD},
+description={Post-traumatic stress disorder (PTSD) is a mental disorder that can develop after a person is exposed to a traumatic event, such as sexual assault, and can include a variety of symptoms like disturbing thoughts, feelings, and re-experiencing trauma-related events},
+first={Post Traumatic Stress Disorder (PTSD)}
+}
+\newacronym{REM}{REM}{rapid eye movement}
 \newglossaryentry{ROI}
 {
   name={ROI},
@@ -32,10 +45,13 @@
   descriptionplural={regions of interest},
   firstplural={\glsentrydescplural{ROI} (\glsentryplural{ROI})}
 } 
-
+\newacronym{RL}{RL}{reinforcement learning}
+\newacronym{RSA}{RSA}{representational similarity analysis}
 \newacronym{s}{s}{seconds}
 \newacronym{SEM}{SEM}{standard error of the mean}
+\newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
 \newacronym{TE}{TE}{echo time}
 \newacronym{TI}{TI}{inversion time}
 \newacronym{TR}{TR}{repetition time}
+\newacronym{VTA}{VTA}{ventral tegmental area}
