added SI to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -48,6 +48,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{RL}{RL}{reinforcement learning}
 \newacronym{RSA}{RSA}{representational similarity analysis}
 \newacronym{s}{s}{seconds}
+\newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
