--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,12 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-09-20 10:40:53 +0200 
+%% Created for Wittkuhn, Lennart at 2019-09-20 10:43:26 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Buzsaki2006,
+	Abstract = {Studies of mechanisms in the brain that allow complicated things to happen in a coordinated fashion have produced some of the most spectacular discoveries in neuroscience. This book provides support for the idea that spontaneous neuron activity, far from being mere noise, is actually the source of our cognitive abilities. It looks at the co-evolution of structure and function in the mammalian brain, illustrating how self-emerged oscillatory timing is the brains fundamental organizer of neuronal information. The small world-like connectivity of the cerebral cortex allows for global computation on multiple spatial and temporal scales. The perpetual interactions among the multiple network oscillators keep cortical systems in a highly sensitive metastable state and provide energy-efficient synchronizing mechanisms via weak links. In a sequence of cycles, this book travels from the physics of oscillations through neuronal assembly organization to complex cognitive processing and memory storage.},
+	Author = {Buzs{\'a}ki, Gy{\"o}rgy},
+	Date-Added = {2019-09-20 10:42:00 +0200},
+	Date-Modified = {2019-09-20 10:43:13 +0200},
+	Doi = {10.1093/acprof:oso/9780195301069.001.0001},
+	Isbn = {9780195301069},
+	Keywords = {oscillations, structure, memory systems, plasticity, cerebral cortex, conscious recollection, consolidation},
+	Month = {Oct},
+	Publisher = {Oxford University Press},
+	Title = {Rhythms of the Brain},
+	Url = {http://dx.doi.org/10.1093/acprof:oso/9780195301069.001.0001},
+	Year = {2006}}
 
 @article{OKeefe1971BR,
 	Abstract = {Responses of cells in the dorsal hippocampus of rats to restraining tactile stimuli as a function of spatial orientation suggest that the hippocampus provides the rest of the brain with a spatial reference map. The activity of cells in such a map would specify the direction in which the s was pointing relative to environmental landmarks and the occurrence of particular tactile, visual, etc., stimuli while facing in that orientation. It is hypothesized that activation of those cells specifying a particular orientation together with a signal indicating movement or intention to move in space would tend to activate cells specifying adjacent or subsequent spatial orientations. In this way, the map would "anticipate" the sensory stimuli consequent to a particular movement.},
