updated glossary entry for HRF

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -16,7 +16,15 @@
 \newacronym{FWHM}{FWHM}{Full Width at Half Maximum}
 \newacronym{GLM}{GLM}{general linear model}
 \newacronym{GR}{GR}{gradient recalled}
-\newacronym{HRF}{HRF}{hemodynamic response function}
+\newglossaryentry{HRF}
+{
+  name={HRF},
+  description={The hemodynamic response function (HRF) characterizes an fMRI response that results from a brief, spatially localized pulse of neuronal activity.},
+  first={\glsentrydesc{HRF} (\glsentrytext{HRF})},
+  plural={HRFs},
+  descriptionplural={hemodynamic response functions},
+  firstplural={\glsentrydescplural{HRF} (\glsentryplural{HRF})}
+} 
 \newacronym{iEEG}{iEEG}{intracranial electroencephalography}
 \newacronym{INU}{INU}{intensity non-uniformity}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
