--- a/code/style.sty
+++ b/code/style.sty
@@ -25,6 +25,8 @@
 \renewcommand{\doiprefix}{doi:~\kern-1pt}
 % change DOIs to hyperlinks:
 \newcommand*{\doi}[1]{\href{http://doi.org/#1}{#1}}
+% stop apacite from showing both year and month in the references:
+\renewcommand{\APACrefYearMonthDay}[3]{\APACrefYear{#1}}
 % for creating apa-Style tables:
 \usepackage{siunitx,booktabs} 
 % package to include graphics
