--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-09-20 14:03:11 +0200 
+%% Created for Wittkuhn, Lennart at 2019-09-20 14:18:24 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -86,9 +86,9 @@
 
 @article{Heeger2002NRN,
 	Abstract = {In recent years, cognitive neuroscientists have taken great advantage of functional magnetic resonance imaging (fMRI) as a non-invasive method of measuring neuronal activity in the human brain. But what exactly does fMRI tell us? We know that its signals arise from changes in local haemodynamics that, in turn, result from alterations in neuronal activity, but exactly how neuronal activity, haemodynamics and fMRI signals are related is unclear. It has been assumed that the fMRI signal is proportional to the local average neuronal activity, but many factors can influence the relationship between the two. A clearer understanding of how neuronal activity influences the fMRI signal is needed if we are correctly to interpret functional imaging data.},
-	Author = {Heeger, David J. and Ress, David},
+	Author = {{Heeger}, David J. and {Ress}, David},
 	Date-Added = {2019-09-20 10:53:46 +0200},
-	Date-Modified = {2019-09-20 10:54:08 +0200},
+	Date-Modified = {2019-09-20 14:18:16 +0200},
 	Doi = {10.1038/nrn730},
 	Issn = {1471-0048},
 	Journal = {Nature Reviews Neuroscience},
@@ -96,7 +96,7 @@
 	Number = {2},
 	Pages = {142--151},
 	Publisher = {Springer Nature},
-	Title = {What does fMRI tell us about neuronal activity?},
+	Title = {{What does fMRI tell us about neuronal activity?}},
 	Url = {http://dx.doi.org/10.1038/nrn730},
 	Volume = {3},
 	Year = {2002},
