updated HRF entry in glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -20,7 +20,7 @@
 {
   name={HRF},
   description={The hemodynamic response function (HRF) characterizes an fMRI response that results from a brief, spatially localized pulse of neuronal activity.},
-  first={\glsentrydesc{HRF} (\glsentrytext{HRF})},
+  first={hemodynamic response function (\glsentrytext{HRF})},
   plural={HRFs},
   descriptionplural={hemodynamic response functions},
   firstplural={\glsentrydescplural{HRF} (\glsentryplural{HRF})}
