added LME to glossary and corrected a typo in the HRF entry

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -19,7 +19,7 @@
 \newglossaryentry{HRF}
 {
   name={HRF},
-  description={The hemodynamic response function (HRF) characterizes an fMRI response that results from a brief, spatially localized pulse of neuronal activity.},
+  description={The hemodynamic response function (HRF) characterizes an fMRI response that results from a brief, spatially localized pulse of neuronal activity},
   first={hemodynamic response function (\glsentrytext{HRF})},
   plural={HRFs},
   descriptionplural={hemodynamic response functions},
@@ -29,6 +29,7 @@
 \newacronym{INU}{INU}{intensity non-uniformity}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
 \newacronym{ITI}{ITI}{inter-trial interval}
+\newacronym{LME}{LME}{linear mixed effects}
 \newacronym{MEG}{MEG}{magnetoencephalography}
 \newacronym{MB}{MB}{multi-band}
 \newacronym{MNI}{MNI}{Montreal Neurological Institute}
