--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-09-24 10:37:29 +0200 
+%% Created for Wittkuhn, Lennart at 2019-09-24 10:42:20 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{R2018,
+	Address = {Vienna, Austria},
+	Author = {{R Core Team}},
+	Date-Added = {2019-09-24 10:40:28 +0200},
+	Date-Modified = {2019-09-24 10:40:56 +0200},
+	Publisher = {R Foundation for Statistical Computing},
+	Title = {{R: A language and environment for statistical computing}},
+	Url = {http://www.r-project.org/},
+	Year = {2018}}
 
 @article{Kenward1997B,
 	Abstract = {Restricted maximum likelihood (REML) is now well established as a method for estimating the parameters of the general Gaussian linear model with a structured covariance matrix, in particular for mixed linear models. Conventionally, estimates of precision and inference for fixed effects are based on their asymptotic distribution, which is known to be inadequate for some small-sample problems. In this paper, we present a scaled Wald statistic, together with an F approximation to its sampling distribution, that is shown to perform well in a range of small sample settings. The statistic uses an adjusted estimator of the covariance matrix that has reduced small sample bias. This approach has the advantage that it reproduces both the statistics and F distributions in those settings where the latter is exact, namely for Hotelling T2 type statistics and for analysis of variance F-ratios. The performance of the modified statistics is assessed through simulation studies of four different REML analyses and the methods are illustrated using three examples.},
