--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -37,6 +37,7 @@
 \newacronym{ms}{ms}{milliseconds}
 \newacronym{min}{min}{minutes}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
+\newacronym{NOUN}{NOUN}{Novel Object and Unusual Name}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
 \newacronym{OFC}{OFC}{orbitofrontal cortex}
 \newglossaryentry{PTSD}{
