--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,25 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-09-25 14:45:11 +0200 
+%% Created for Wittkuhn, Lennart at 2019-09-25 14:53:59 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@misc{R2019,
+	Address = {Vienna, Austria},
+	Author = {{R Core Team}},
+	Date-Added = {2019-09-25 14:53:28 +0200},
+	Date-Modified = {2019-09-25 14:53:58 +0200},
+	Organization = {R Foundation for Statistical Computing},
+	Title = {R: A Language and Environment for Statistical Computing},
+	Url = {https://www.R-project.org/},
+	Year = {2019}}
+
 @article{Bates2015JSS,
 	Abstract = {Maximum likelihood or restricted maximum likelihood (REML) estimates of the parameters in linear mixed-effects models can be determined using the lmer function in the lme4 package for R. As for most model-fitting functions in R, the model is described in an lmer call by a formula, in this case including both fixed- and random-effects terms. The formula and data together determine a numerical representation of the model from which the profiled deviance or the profiled REML criterion can be evaluated as a function of some of the model parameters. The appropriate criterion is optimized, using one of the constrained optimization functions in R, to provide the parameter estimates. We describe the structure of the model, the steps in evaluating the profiled deviance or REML criterion, and the structure of classes or types that represents such a model. Sufficient detail is included to allow specialization of these structures by users who wish to write functions to fit specialized linear mixed models, such as models incorporating pedigrees or smoothing splines, that are not easily expressible in the formula language used by lmer.},
 	Author = {Bates, Douglas and M{\"a}chler, Martin and Bolker, Ben and Walker, Steve},
 	Date-Added = {2019-09-25 14:44:12 +0200},
-	Date-Modified = {2019-09-25 14:45:04 +0200},
+	Date-Modified = {2019-09-25 14:51:47 +0200},
 	Doi = {10.18637/jss.v067.i01},
 	Issn = {1548-7660},
 	Journal = {Journal of Statistical Software},
 	Keywords = {sparse matrix methods; linear mixed models; penalized least squares; Cholesky decomposition},
 	Number = {1},
 	Pages = {1--48},
-	Title = {Fitting Linear Mixed-Effects Models Using lme4},
+	Title = {Fitting Linear Mixed-Effects Models Using {lme4}},
 	Url = {https://www.jstatsoft.org/v067/i01},
 	Volume = {67},
 	Year = {2015},
