--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -29,6 +29,7 @@
 \newacronym{INU}{INU}{intensity non-uniformity}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
 \newacronym{ITI}{ITI}{inter-trial interval}
+\newacronym{IRB}{IRB}{institutional review board}
 \newacronym{LME}{LME}{linear mixed effects}
 \newacronym{MEG}{MEG}{magnetoencephalography}
 \newacronym{MB}{MB}{multi-band}
