added S-R to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -61,6 +61,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{s}{s}{seconds}
 \newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
+\newacronym{S-R}{S-R}{stimulus-response}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
 \newacronym{TE}{TE}{echo time}
