get rid of `Not defining \perthousand` + `Not defining \micro` warnings

--- a/code/style.sty
+++ b/code/style.sty
@@ -8,7 +8,7 @@
 % package comment for commenting out several lines of code at once:
 \usepackage{comment}
 % package to use symbols like \degree etc.
-\usepackage{gensymb}
+\usepackage{textcomp,gensymb}
 % change spacing of lines:
 \usepackage[onehalfspacing]{setspace}
 % set hyperlinks:
