--- a/code/style.sty
+++ b/code/style.sty
@@ -1,6 +1,6 @@
 
 % select the language:
-\usepackage[english,ngerman]{babel}
+\usepackage[ngerman, english]{babel}
 % for direct text quotes:
 \usepackage{epigraph}
 % import package to select multiple affiliations for authors:
