added Lenth2019 for emmeans R package

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-09-27 08:41:11 +0200 
+%% Created for Wittkuhn, Lennart at 2019-09-27 10:15:42 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Lenth2019,
+	Author = {Lenth, Russell},
+	Date-Added = {2019-09-27 10:13:17 +0200},
+	Date-Modified = {2019-09-27 10:15:37 +0200},
+	Note = {R package version 1.3.4},
+	Title = {emmeans: Estimated Marginal Means, aka Least-Squares Means},
+	Url = {https://CRAN.R-project.org/package=emmeans},
+	Year = {2019}}
 
 @article{Tang2019NN,
 	Abstract = {A fundamental cognitive process is to map value and identity onto the objects we learn about. However, what space best embeds this mapping is not completely understood. Here we develop tools to quantify the space and organization of such a mapping in neural responses as reflected in functional MRI, to show that quick learners have a higher dimensional representation than slow learners, and hence more easily distinguishable whole-brain responses to objects of different value. Furthermore, we find that quick learners display more compact embedding of their neural responses, and hence have higher ratios of their stimuli dimension to their embedding dimension, which is consistent with greater efficiency of cognitive coding. Lastly, we investigate the neurophysiological drivers at smaller scales and study the complementary distinguishability of whole-brain responses. Our results demonstrate a spatial organization of neural responses characteristic of learning and offer geometric measures applicable to identifying efficient coding in higher-order cognitive processes.},
@@ -1139,7 +1148,7 @@
 	Abstract = {Rats repeatedly ran through a sequence of spatial receptive fields of hippocampal CA1 place cells in a fixed temporal order. A novel combinatorial decoding method reveals that these neurons repeatedly fired in precisely this order in long sequences involving four or more cells during slow wave sleep (SWS) immediately following, but not preceding, the experience. The SWS sequences occurred intermittently in brief (∼100 ms) bursts, each compressing the behavioral sequence in time by approximately 20-fold. This rapid encoding of sequential experience is consistent with evidence that the hippocampus is crucial for spatial learning in rodents and the formation of long-term memories of events in time in humans.},
 	Author = {Lee, Albert K. and Wilson, Matthew A.},
 	Date-Added = {2019-09-19 15:08:54 +0200},
-	Date-Modified = {2019-09-20 16:41:39 +0200},
+	Date-Modified = {2019-09-27 10:15:23 +0200},
 	Doi = {10.1016/s0896-6273(02)01096-6},
 	Issn = {0896-6273},
 	Journal = {Neuron},
