added HSD to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -24,7 +24,8 @@
   plural={HRFs},
   descriptionplural={hemodynamic response functions},
   firstplural={\glsentrydescplural{HRF} (\glsentryplural{HRF})}
-} 
+}
+\newacronym{HSD}{HSD}{honest significant difference}
 \newacronym{iEEG}{iEEG}{intracranial electroencephalography}
 \newacronym{INU}{INU}{intensity non-uniformity}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
