--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -6,6 +6,14 @@
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
 \newacronym{DMN}{DMN}{default mode network}
+{
+  name={ECR},
+  description={An early-career researcher (ERC) is commonly considered to be a researcher at the early stages of an academic career, usually a predoctoral fellow or graduate student.},
+  first={early-career researcher (\glsentrytext{ERC})},
+  plural={ERCs},
+  descriptionplural={early career researchers},
+  firstplural={\glsentrydescplural{ERC} (\glsentryplural{ERC})}
+}
 \newacronym{EEG}{EEG}{electroencephalography}
 \newacronym{EPI}{EPI}{echo-planar imaging}
 \newacronym{FDR}{FDR}{false discovery rate}
@@ -29,6 +37,7 @@
 \newacronym{iEEG}{iEEG}{intracranial electroencephalography}
 \newacronym{INU}{INU}{intensity non-uniformity}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
+\newacronym{IT}{IT}{information technology}
 \newacronym{ITI}{ITI}{inter-trial interval}
 \newacronym{IRB}{IRB}{institutional review board}
 \newacronym{LME}{LME}{linear mixed effects}
