--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -36,6 +36,7 @@
 \newacronym{HSD}{HSD}{honest significant difference}
 \newacronym{iEEG}{iEEG}{intracranial electroencephalography}
 \newacronym{INU}{INU}{intensity non-uniformity}
+\newacronym{IRB}{IRB}{institutional review board}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
 \newacronym{IT}{IT}{information technology}
 \newacronym{ITI}{ITI}{inter-trial interval}
