update ECR glossary entry

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -8,11 +8,11 @@
 \newacronym{DMN}{DMN}{default mode network}
 {
   name={ECR},
-  description={An early-career researcher (ERC) is commonly considered to be a researcher at the early stages of an academic career, usually a predoctoral fellow or graduate student.},
-  first={early-career researcher (\glsentrytext{ERC})},
-  plural={ERCs},
+  description={An early-career researcher (ECR) is commonly considered to be a researcher at the early stages of an academic career, usually a predoctoral fellow or graduate student.},
+  first={early-career researcher (\glsentrytext{ECR})},
+  plural={ECRs},
   descriptionplural={early career researchers},
-  firstplural={\glsentrydescplural{ERC} (\glsentryplural{ERC})}
+  firstplural={\glsentrydescplural{ECR} (\glsentryplural{ECR})}
 }
 \newacronym{EEG}{EEG}{electroencephalography}
 \newacronym{EPI}{EPI}{echo-planar imaging}
