minor update on ECR glossary entry

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -8,10 +8,10 @@
 \newacronym{DMN}{DMN}{default mode network}
 {
   name={ECR},
-  description={An early-career researcher (ECR) is commonly considered to be a researcher at the early stages of an academic career, usually a predoctoral fellow or graduate student.},
+  description={An early-career researcher (ECR) is commonly considered to be a researcher at the early stages of an academic career, usually a predoctoral fellow or graduate student},
   first={early-career researcher (\glsentrytext{ECR})},
   plural={ECRs},
-  descriptionplural={early career researchers},
+  descriptionplural={early-career researchers},
   firstplural={\glsentrydescplural{ECR} (\glsentryplural{ECR})}
 }
 \newacronym{EEG}{EEG}{electroencephalography}
