--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -6,6 +6,7 @@
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
 \newacronym{DMN}{DMN}{default mode network}
+\newglossaryentry{ECR}
 {
   name={ECR},
   description={An early-career researcher (ECR) is commonly considered to be a researcher at the early stages of an academic career, usually a predoctoral fellow or graduate student},
