add amsmath package to style.sty preamble

--- a/code/style.sty
+++ b/code/style.sty
@@ -56,3 +56,5 @@
 % change formatting "to save trees":
 % \usepackage{moreverb,savetrees}
 \usepackage{float}
+% highly recommended as an adjunct to serious mathematical typesetting:
+\usepackage{amsmath}
