fix capitalization of fMRI in title of Spiridon2002N

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-11-06 17:39:09 +0100 
+%% Created for Wittkuhn, Lennart at 2019-11-06 17:41:39 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -1910,7 +1910,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	Abstract = {We used fMRI to study the distribution of object category information in the ventral visual pathway. Extending the findings of Haxby et al. (2001), we find that categories of stimuli can be distinguished by the pattern of activation they elicit across this entire pathway, even when the stimuli within a category differ in viewpoint, exemplar, or image format. However, regions within the ventral visual pathway are neither interchangeable nor equipotential. Although the FFA and PPA permit excellent discrimination between preferred versus nonpreferred stimuli (e.g., faces-bottles and houses-bottles, respectively), we find that neither region alone permits accurate discrimination between pairs of nonpreferred stimuli (e.g., bottles-shoes). These findings indicate that the ventral visual pathway is not homogeneous, but contains some regions (including FFA and PPA) that are primarily involved in the analysis of a single class of stimulus.},
 	Author = {Spiridon, Mona and Kanwisher, Nancy},
 	Date-Added = {2019-09-20 10:07:14 +0200},
-	Date-Modified = {2019-09-20 16:41:39 +0200},
+	Date-Modified = {2019-11-06 17:41:34 +0100},
 	Doi = {10.1016/s0896-6273(02)00877-2},
 	Issn = {0896-6273},
 	Journal = {Neuron},
@@ -1919,7 +1919,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	Pages = {1157--1165},
 	Publisher = {Elsevier BV},
 	Tags = {highspeed},
-	Title = {How Distributed Is Visual Category Information in Human Occipito-Temporal Cortex? An fMRI Study},
+	Title = {How Distributed Is Visual Category Information in Human Occipito-Temporal Cortex? An {fMRI} Study},
 	Url = {http://dx.doi.org/10.1016/S0896-6273(02)00877-2},
 	Volume = {35},
 	Year = {2002},
