fix capitalization in Smith1997IJCV

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-11-06 17:45:52 +0100 
+%% Created for Wittkuhn, Lennart at 2019-11-06 17:48:02 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -41,7 +41,7 @@
 	Abstract = {This paper describes a new approach to low level image processing; in particular, edge and corner detection and structure preserving noise reduction. Non-linear filtering is used to define which parts of the image are closely related to each individual pixel; each pixel has associated with it a local image region which is of similar brightness to that pixel. The new feature detectors are based on the minimization of this local image region, and the noise reduction method uses this region as the smoothing neighbourhood. The resulting methods are accurate, noise resistant and fast. Details of the new feature detectors and of the new noise reduction method are described, along with test results.},
 	Author = {Smith, Stephen M. and Brady, J. Michael},
 	Date-Added = {2019-11-06 17:16:05 +0100},
-	Date-Modified = {2019-11-06 17:16:59 +0100},
+	Date-Modified = {2019-11-06 17:48:01 +0100},
 	Doi = {10.1023/a:1007963824710},
 	Issn = {0920-5691},
 	Journal = {International Journal of Computer Vision},
@@ -49,7 +49,7 @@
 	Number = {1},
 	Pages = {45--78},
 	Publisher = {Springer Nature},
-	Title = {SUSAN - A New Approach to Low Level Image Processing},
+	Title = {{SUSAN} - A New Approach to Low Level Image Processing},
 	Url = {http://dx.doi.org/10.1023/A:1007963824710},
 	Volume = {23},
 	Year = {1997},
