Capitalized journal name in Guyon paper

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-11-15 13:57:07 +0100 
+%% Created for Wittkuhn, Lennart at 2019-11-18 09:04:21 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -495,8 +495,8 @@
 	Abstract = {Variable and feature selection have become the focus of much research in areas of application for which datasets with tens or hundreds of thousands of variables are available. These areas include text processing of internet documents, gene expression array analysis, and combinatorial chemistry. The objective of variable selection is three-fold: improving the prediction performance of the predictors, providing faster and more cost-effective predictors, and providing a better understanding of the underlying process that generated the data. The contributions of this special issue cover a wide range of aspects of such problems: providing a better definition of the objective function, feature construction, feature ranking, multivariate feature selection, efficient search methods, and feature validity assessment methods. },
 	Author = {Guyon, Isabelle and Elisseeff, Andr{\'e}},
 	Date-Added = {2019-11-12 18:00:03 +0100},
-	Date-Modified = {2019-11-12 18:00:57 +0100},
-	Journal = {Journal of machine learning research},
+	Date-Modified = {2019-11-18 09:04:20 +0100},
+	Journal = {Journal of Machine Learning Research},
 	Number = {Mar},
 	Pages = {1157--1182},
 	Title = {An introduction to variable and feature selection},
