fix title of Rossion2004P

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-11-26 16:26:59 +0100 
+%% Created for Wittkuhn, Lennart at 2019-11-26 16:29:01 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -65,7 +65,7 @@
 	Abstract = {Theories of object recognition differ to the extent that they consider object representations as being mediated only by the shape of the object, or shape and surface details, if surface details are part of the representation. In particular, it has been suggested that color information may be helpful at recognizing objects only in very special cases, but not during basic-level object recognition in good viewing conditions. In this study, we collected normative data (naming agreement, familiarity, complexity, and imagery judgments) for Snodgrass and Vanderwart's object database of 260 black-and-white line drawings, and then compared the data to exactly the same shapes but with added gray-level texture and surface details (set 2), and color (set 3). Naming latencies were also recorded. Whereas the addition of texture and shading without color only slightly improved naming agreement scores for the objects, the addition of color information unambiguously improved naming accuracy and speeded correct response times. As shown in previous studies, the advantage provided by color was larger for objects with a diagnostic color, and structurally similar shapes, such as fruits and vegetables, but was also observed for man-made objects with and without a single diagnostic color. These observations show that basic-level `everyday' object recognition in normal conditions is facilitated by the presence of color information, and support a `shape + surface' model of object recognition, for which color is an integral part of the object representation. In addition, the new stimuli (sets 2 and 3) and the corresponding normative data provide valuable materials for a wide range of experimental and clinical studies of object recognition.},
 	Author = {Rossion, Bruno and Pourtois, Gilles},
 	Date-Added = {2019-11-26 15:01:41 +0100},
-	Date-Modified = {2019-11-26 15:02:04 +0100},
+	Date-Modified = {2019-11-26 16:29:01 +0100},
 	Doi = {10.1068/p5117},
 	Issn = {1468-4233},
 	Journal = {Perception},
@@ -73,7 +73,7 @@
 	Number = {2},
 	Pages = {217--236},
 	Publisher = {SAGE Publications},
-	Title = {Revisiting Snodgrass and Vanderwart's Object Pictorial Set: The Role of Surface Detail in Basic-Level Object Recognition},
+	Title = {Revisiting {Snodgrass} and {Vanderwart's} Object Pictorial Set: The Role of Surface Detail in Basic-Level Object Recognition},
 	Url = {http://dx.doi.org/10.1068/p5117},
 	Volume = {33},
 	Year = {2004},
