update pages in Liu2019C

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2019-11-26 16:29:01 +0100 
+%% Created for Wittkuhn, Lennart at 2019-11-26 17:35:52 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -1750,13 +1750,13 @@
 	Abstract = {Knowledge abstracted from previous experiences can be transferred to aid new learning. Here, we asked whether such abstract knowledge immediately guides the replay of new experiences. We first trained participants on a rule defining an ordering of objects and then presented a novel set of objects in a scrambled order. Across two studies, we observed that representations of these novel objects were reactivated during a subsequent rest. As in rodents, human ``replay'' events occurred in sequences accelerated in time, compared to actual experience, and reversed their direction after a reward. Notably, replay did not simply recapitulate visual experience, but followed instead a sequence implied by learned abstract knowledge. Furthermore, each replay contained more than sensory representations of the relevant objects. A sensory code of object representations was preceded 50 ms by a code factorized into sequence position and sequence identity. We argue that this factorized representation facilitates the generalization of a previously learned structure to new objects.},
 	Author = {Liu, Yunzhe and Dolan, Raymond J. and Kurth-Nelson, Zeb and Behrens, Timothy E.J.},
 	Date-Added = {2019-11-01 13:42:05 +0100},
-	Date-Modified = {2019-11-01 13:42:36 +0100},
+	Date-Modified = {2019-11-26 17:35:51 +0100},
 	Doi = {10.1016/j.cell.2019.06.012},
 	Issn = {0092-8674},
 	Journal = {Cell},
 	Month = {Jul},
 	Number = {3},
-	Pages = {640--652.e14},
+	Pages = {640--652},
 	Publisher = {Elsevier BV},
 	Title = {Human Replay Spontaneously Reorganizes Experience},
 	Url = {http://dx.doi.org/10.1016/j.cell.2019.06.012},
