--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -72,6 +72,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{s}{s}{seconds}
 \newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
+\newacronym{SNR}{SNR}{signal-to-noise ratio}
 \newacronym{S-R}{S-R}{stimulus-response}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
