add gray-matter and white-matter to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -24,6 +24,7 @@
 \newacronym{FSL}{FSL}{FMRIB Software Library}
 \newacronym{FWHM}{FWHM}{Full Width at Half Maximum}
 \newacronym{GLM}{GLM}{general linear model}
+\newacronym{GM}{GM}{gray-matter}
 \newacronym{GR}{GR}{gradient recalled}
 \newglossaryentry{HRF}
 {
@@ -80,3 +81,4 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{TI}{TI}{inversion time}
 \newacronym{TR}{TR}{repetition time}
 \newacronym{VTA}{VTA}{ventral tegmental area}
+\newacronym{WM}{WM}{white-matter}
