add ANOVA to glossary and update ANTS to ANTs

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -1,4 +1,5 @@
-\newacronym{ANTS}{ANTS}{Advanced Normalization Tools}
+\newacronym{ANTs}{ANTs}{Advanced Normalization Tools}
+\newacronym{ANOVA}{ANOVA}{analysis of variance}
 \newacronym{A-P}{A-P}{anterior-to-posterior}
 \newacronym{BET}{BET}{Brain Extraction Tool}
 \newacronym{BIDS}{BIDS}{brain imaging data structure}
@@ -19,6 +20,7 @@
 \newacronym{EPI}{EPI}{echo-planar imaging}
 \newacronym{FDR}{FDR}{false discovery rate}
 \newacronym{FA}{FA}{flip angle}
+\newacronym{FD}{FD}{framewise displacement}
 \newacronym{fMRI}{fMRI}{functional magnetic resonance imaging}
 \newacronym{FOV}{FOV}{field of view}
 \newacronym{FSL}{FSL}{FMRIB Software Library}
