add coloring for table headings

--- a/code/style.sty
+++ b/code/style.sty
@@ -3,7 +3,9 @@
 % for direct text quotes:
 \usepackage{epigraph}
 % import package to select multiple affiliations for authors:
-\usepackage{authblk, xcolor}
+\usepackage{authblk}
+% import package to color table headings
+\usepackage[table]{xcolor}
 % package comment for commenting out several lines of code at once:
 \usepackage{comment}
 % package to use symbols like \degree etc.
