--- a/code/apa_style.sty
+++ b/code/apa_style.sty
@@ -1,12 +1,13 @@
 % use apacite to create apa-style citations:
 \usepackage[sectionbib,numberedbib,bibnewpage]{apacite}
-% remove URLs from bibliography:
 \usepackage{etoolbox}
+\usepackage{hyperref}
+% change DOIs to hyperlinks:
+\newcommand*{\doi}[1]{\href{http://doi.org/#1}{#1}}
+% remove URLs from bibliography:
 \renewenvironment{APACrefURL}[1][]{}{}
 \AtBeginEnvironment{APACrefURL}{\renewcommand{\url}[1]{}}
 \renewcommand{\doiprefix}{doi:~\kern-1pt}
-% change DOIs to hyperlinks:
-\newcommand*{\doi}[1]{\href{http://doi.org/#1}{#1}}
 % stop apacite from showing both year and month in the references:
 \AtBeginDocument{\renewcommand{\APACrefYearMonthDay}[3]{\BBOP{#1}\BBCP}}
 % for creating apa-Style tables:
