add MVPA to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -52,6 +52,7 @@
 \newacronym{ms}{ms}{milliseconds}
 \newacronym{min}{min}{minutes}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
+\newacronym{MVPA}{MVPA}{multi-voxel pattern analysis}
 \newacronym{NOUN}{NOUN}{Novel Object and Unusual Name}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
 \newacronym{OFC}{OFC}{orbitofrontal cortex}
