added czech babel support

--- a/code/style.sty
+++ b/code/style.sty
@@ -1,5 +1,8 @@
+% set font and input encoding
+%\usepackage[T1]{fontenc}
+%\usepackage[utf8]{inputenc}
 % select the language:
-\usepackage[ngerman, english]{babel}
+\usepackage[ngerman, czech, english]{babel}
 % for direct text quotes:
 \usepackage{epigraph}
 % import package to select multiple affiliations for authors:
