--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -54,6 +54,7 @@
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
 \newacronym{MVPA}{MVPA}{multi-voxel pattern analysis}
 \newacronym{NOUN}{NOUN}{Novel Object and Unusual Name}
+\newacronym{NREM}{NREM}{non-rapid eye movement}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
 \newacronym{OFC}{OFC}{orbitofrontal cortex}
 \newglossaryentry{PTSD}{
